2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Shell.java: Added calls
	to preserve() and release() on cmd object being
	passed to recordAndEval() to avoid a null
	pointer exception.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/pkgIndex.tcl:
	* src/tcljava/tcl/lang/BlendExtension.java:
	Moved the exporting of commands in the java
	namespace from pkgIndex.tcl to BlendExtension.java
	so that it will work in both Jacl and Tcl Blend.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* docs/TclJavaLib/Eval.htm:
	* src/jacl/tcl/lang/BgErrorMgr.java:
	* src/jacl/tcl/lang/Interp.java:
	* src/jacl/tcl/lang/Parser.java:
	* src/tcljava/tcl/lang/TCL.java:
	* src/tests/jacl/tcl/lang/TestEval2Cmd.java:
	* src/tests/jacl/tcl/lang/TestEvalObjvCmd.java:
	Moved eval() flags like TCL_EVAL_GLOBAL
	from the Jacl Parser class to the tcljava
	TCL class. This makes it possible to write
	code that calls eval() with flags arguments
	that works in both Jacl and Tcl Blend. Also
	removed an unused variable from Jacl's Interp.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Interp.java: Removed
	unused primaryThread variable.

2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/ConsoleEvent.java: Removed
	class as it is no longer needed after changes to Shell.
	* src/jacl/tcl/lang/Shell.java: Overhauled the
	way the Shell program interacts with the Interp.
	The old way was not thread safe. The prompt displayed
	when a command is not yet complete has also been
	changed to match recent verisons of Tcl.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* src/pkgIndex.tcl: Added missing
	namespace export of the java::import cmd.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* src/native/javaCmd.c:
	* src/native/javaObj.c:
	* src/native/javaUtil.c:
	* src/native/tclResult.c:
	* unix/Makefile.in:
	* unix/configure.in:
	Removed old compat code that supported
	building Tcl Blend with Tcl 8.0.
	We now require Tcl 8.3.1 as a minimum.
